--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -1,1 +1,24 @@
+/* Write your CSS here */
+.sm-about-img {
+  display: flex;
+}
+.lg-about-img {
+  display: none;
+}
 
+@media (min-width: 768px) {
+  .sm-about-img {
+    display: none;
+  }
+  .lg-about-img {
+    display: flex;
+  }
+}
+.about-container {
+  min-height: 100vh;
+}
+.about-img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
