--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,1 +1,55 @@
 /* Write your CSS here */
+/* Write your CSS here */
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  width: 35px;
+}
+.hr-line {
+  color: #dcdcdc;
+  width: 100%;
+}
+.ham-btn {
+  border: none;
+  background: transparent;
+}
+.ham-icon {
+  font-size: 30px;
+}
+.wrap-popup-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: none;
+  background: transparent;
+  text-decoration: none;
+}
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  color: black;
+}
+.close {
+  align-self: flex-end;
+  border: none;
+  background: transparent;
+}
+.home-icon-popup {
+  font-size: 30px;
+  margin: 5px;
+}
+.about-icon-popup {
+  font-size: 30px;
+  margin: 5px;
+}
+.popup-text {
+  margin: 5px;
+  font-family: 'roboto';
+  font-size: 20px;
+}
